# upload

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  index.html  manage.py  params.json  pyproject.toml  requirements.txt  setup.py  social_profile.py
.github/workflows/: python-package.yml
crop/: crop.js  crop.py  index.html
examples/: file-api.html  file-upload.html  iframe.html
m/: upload.js
upload/: app_settings.py  forms.py  middleware.py  models.py  social_profile.py  urls.py  utils.py  views.py  views_post.py
upload/fixtures/: initial_data.json
upload/management/commands/: sync_uploads.py
upload/migrations/: 0001_initial.py  0002_add_width_height.py  0003_generic_fk.py  0004_ondelete.py  0005_add_hash.py  0006_added_timestamps.py
upload/static/: upload.css
upload/static/upload/: crop.js  photos.css  photos.js  upload.css  upload.js
upload/templates/: ad.html  album.html  base.html  collection.html  index.html  post.html
upload/templates/upload/: crop.html  form.html  image.html  init.html.js  init.js.html  post.html  reload-thumbnails.html  xhr.js
upload/templates/upload/photos/: album.html  figure.html  gallery.html  head.html  ui.html
upload/templatetags/: thumbnail.py  upload_tags.py
upload/tests/: crop.py  settings.py  test_forms.py  test_models.py  test_settings.py  test_urls.py  test_views.py
upload/upload/: models.py  views.py
upload/utils/: auth.py  download.py  email_upload_recipe.py  imaging.py  migrate_uploads.py  spoonfeed.py  storage.py
w3c-file-api/: size-check.html  type-check.html
