[project]
name = "upload"
version = "2.1.0"
description = "HTML5 Upload library with Django backend and image manipulation tools"
readme = "README.md"
license = { text = "BSD License" }
keywords = ["upload", "photos", "files", "django", "app", "crop", "gallery"]
authors = [
    { name = "fmalina", email = "fmalina@pm.me" }
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Framework :: Django",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "django>=3.0",
    "Pillow",
]

[project.urls]
"Homepage" = "https://github.com/fmalina/upload"
"Repository" = "https://github.com/fmalina/upload"

[tool.setuptools]
packages = ["upload"]
include-package-data = true

[tool.setuptools.package-data]
"upload" = ["templates/*", "static/*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
